tests/fail/parsingMM0/abstract def with declared dummies.mm0
sort s;
term a :s;
 def d (.x:s) : s;
